Table: row-level css styles